--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "shortid": "^2.2.16",
     "styled-components": "^5.1.1",
     "typescript-plugin-styled-components": "^1.4.4"
   },
