--- a/netlify.toml
+++ b/netlify.toml
@@ -5,5 +5,6 @@
 # “command” is your build command.
 # “publish” is the directory to publish (relative to the root of your repo).
 
-[build-prod]
+[build]
+  command = "npm run build-prod"
   publish = "dist"
